Fix the two identified bugs. Polish code. Add comments. Improve color computation. Improve color button appearence

--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,7 @@ body {
     justify-content: center;
 }
 
-.pixel {
+.grid-element {
     padding: none;
     border: solid lightgray 1px;
     background-color: white;
